--- a/src/app/components/list-view/list-view.component.html
+++ b/src/app/components/list-view/list-view.component.html
@@ -1,1 +1,5 @@
-<p>list-view works!</p>
+<div class="list flex flex-col gap-5 sm:m-5 max-h-[300px] overflow-scroll">
+    <div class="statio" *ngFor="let station of stations">
+        <app-single-list-view></app-single-list-view>
+    </div>
+</div>
