--- a/src/app/components/graph-view/graph-view.component.html
+++ b/src/app/components/graph-view/graph-view.component.html
@@ -1,1 +1,30 @@
-<p>graph-view works!</p>
+<div class="flex flex-col bg-white rounded-md sm:m-5 p-4">
+    <div class="header flex flex-col sm:flex-row justify-between items-center border-b-2 border-gray-600  pt-4 mb-5">
+        <div class="heading text-sm font-bold uppercase "> stations activates overview</div>
+        <ul class="flex gap-5 titles">
+            <li class="pb-2 cursor-pointer" [class.active]="activeTab === 1 " (click)="setActive(1)">Sales</li>
+            <li class="pb-2 cursor-pointer" [class.active]="activeTab === 2 " (click)="setActive(2)">Transactions</li>
+            <li class="pb-2 cursor-pointer" [class.active]="activeTab === 3 " (click)="setActive(3)">Values</li>
+            <li class="pb-2 cursor-pointer" [class.active]="activeTab === 4 " (click)="setActive(4)">compression</li>
+        </ul>
+    </div>
+    <div *ngIf="activeTab === 1">
+        <canvas baseChart class="chart" [data]="barChartData" [options]="barChartOptions" [type]="barChartType">
+        </canvas>
+    </div>
+    <div *ngIf="activeTab === 2">
+        <canvas baseChart class="chart" [data]="barChartData2" [options]="barChartOptions" [type]="barChartType">
+        </canvas>
+    </div>
+    <div *ngIf="activeTab === 3">
+        <canvas baseChart class="chart" [data]="barChartData3" [options]="barChartOptions" [type]="barChartType">
+        </canvas>
+    </div>
+    <div *ngIf="activeTab === 4">
+        <canvas baseChart class="chart" [data]="barChartData4" [options]="barChartOptions" [type]="barChartType">
+        </canvas>
+    </div>
+
+    
+    
+</div>
