--- a/src/app/components/rating-list/rating-list.component.html
+++ b/src/app/components/rating-list/rating-list.component.html
@@ -1,5 +1,4 @@
-<div class="list flex gap-4 ps-10 justify-between w-full">
-
+<div class="list flex gap-4 sm:ps-10 justify-between w-full overflow-x-scroll ">
 
     <div class="total_value flex flex-col ps-6 pe-8 py-4 grow  rounded-2xl bg-active ">
         <div class="number text-3xl text-black">251 <span class="text-sm">EGP</span></div>
@@ -39,11 +38,11 @@
         <p class="font-bold text-xs text-black">Total Value</p>
         <div class="rating flex gap-1 font-Montserrat items-baseline text-primary">
             <span class="w-0 h-0 
-            border-l-[5px] border-l-transparent
-            border-t-[10px] border-t-primary
-            border-r-[5px] border-r-transparent"></span>
+                border-l-[5px] border-l-transparent
+                border-t-[10px] border-t-primary
+                border-r-[5px] border-r-transparent"></span>
             <span class="text-sm"> 2%</span>
         </div>
     </div>
-    
+
 </div>
